# Next-25

./: .dockerignore  .env  Dockerfile  README.md  compose.template.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: .env  ci-cd.yml
app/: .env  README.md  main.py  requirements.txt
app/config/: settings.py
app/database/: Next'25.db  __init__.py  models.py  new_models.py  session.py
app/handlers/: attachments.py  chat.py  debug.py  delete_user.py  dispatcher.py  driver.py  manager.py  old_dispatcher.py  old_driver.py  profile.py  start.py
app/keyboards/: main_menu.py  request_actions.py
app/logs/: __init__.py  logging.py
app/services/: __init__.py  notifications.py
app/states/: __init__.py  request_states.py  user_states.py
app/tests/: __init__.py
app/utils/: __init__.py  decorators.py  loader.py  set_bot_commands.py  validators.py
